# send-pocket-to-kindle

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: Article.ts  IsLoginOutput.ts  ListOutput.ts  LoginOutput.ts  SendInput.ts
src-tauri/src/: command.rs  env.rs  main.rs  state.rs
src-tauri/src/domain/: article.rs  mod.rs
src-tauri/src/domain/repository/: kindle.rs  mod.rs  pocket.rs  readability.rs
src-tauri/src/domain/service/: mod.rs  pocket.rs  send_to_kindle.rs
src-tauri/src/repository/: kindle.rs  readability.rs
src-tauri/src/repository/pocket/: data.rs  mod.rs
src-tauri/src/service/: pocket.rs  send_to_kindle.rs
