[package]
name = "core"
version = "0.1.0"
description = ""
authors = ["tkat0"]
license = ""
repository = ""
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["fs-all", "shell-open"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
ts-rs = "6.1"
shaku = "0.6.1"
envy = "0.4"
dotenv = "0.15.0"
crossbeam-channel = "0.5"
async-trait = "0.1.57"
lettre = "0.10"
epub-builder = "0.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
